feat: update onboarding process
